--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
     <title>Swipe Side</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body class="container">
-    <h1>1000</h1>
+    <div class="menuBar topBar">
+        <h1>Settings</h1>
+        <h1>Profile</h1>
+    </div>
+    <div class="menuBar bottomBar">
+        <h1>Profile</h1>
+        <h1>Swipe</h1>
+        <h1>Messages</h1>
+    </div>
+    
     
 </body>
 </html>
