--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="user">
         <div style="height: 100%;" id="imgContainer">
-            
+            <img src="./testImages/img-1.jpg" alt="">
         </div>
 
 
@@ -34,7 +34,7 @@
 
         </div>
         <div class="nameTag">
-            <h1>Gunnar - 23 år</h1>
+            <h1>Gunnar - 6år</h1>
         </div>
 
 
