--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <iframe style="display: none;" id="startPage" src="startPage/startPage.html" frameborder="0"></iframe>
     <iframe style="display: none;" id="loginPage" src="loginPage/loginPage.html" frameborder="0"></iframe>
     <iframe style="display: none;" id="registerPage" src="registerPage/registerPage.html" frameborder="0"></iframe>
-    <iframe style="display: none;" id="app" src="app/app.html" frameborder="0"></iframe>
 
-    <script src="index.js" ></script>
+
+    <script id="script" src="index.js" ></script>
 
 
 </body>
