--- a/app/profil/profilPage.html
+++ b/app/profil/profilPage.html
@@ -10,7 +10,7 @@
     <title>Swipe Side</title>
     <link rel="stylesheet" href="profilPage.css">
 </head>
-<body class="container">
+<body  onload="window.parent.parent.asyncLoadComplete('profilPage')" class="container">
     <div class="user">
         <div class="underContainer">
             <img class="profilePic" src="https://thispersondoesnotexist.com" alt="">
