--- a/registerPage/registerPage.html
+++ b/registerPage/registerPage.html
@@ -9,7 +9,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="registerPage.css">
 </head>
-<body>
+<body onload="window.parent.asyncLoadComplete('registerPage')">
     <div class="container">
         <img src="../assets/logo-placeholder.jpg" alt="">
         <h1>Velkommen</h1>
