--- a/startPage/startPage.html
+++ b/startPage/startPage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="startPage.css">
     <title>Document</title>
 </head>
-<body>
+<body onload="window.parent.asyncLoadComplete('startPage')">
     <div class="container">
         <img src="../assets/logo-placeholder.jpg" alt="">
         <h1>Velkommen</h1>
