--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
     <div id="loading" class="loading">
         <h1>Indlæser...</h1>
     </div>
-    <iframe style="display: none;" id="startPage" src="startPage/startPage.html" frameborder="0"></iframe>
-    <iframe style="display: none;" id="loginPage" src="loginPage/loginPage.html" frameborder="0"></iframe>
-    <iframe style="display: none;" id="registerPage" src="registerPage/registerPage.html" frameborder="0"></iframe>
-
-
     <script id="script" src="index.js" ></script>
+    <script src="async.js" ></script>
 
 
 </body>
