--- a/loginPage/loginPage.html
+++ b/loginPage/loginPage.html
@@ -9,7 +9,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="loginPage.css">
 </head>
-<body>
+<body onload="window.parent.asyncLoadComplete('loginPage')">
     <div class="container">
         <img src="../assets/logo-placeholder.jpg" alt="">
         <h1>Velkommen tilbage</h1>
