--- a/app/swipe/swipePage.html
+++ b/app/swipe/swipePage.html
@@ -11,7 +11,7 @@
 </head>
 <body onload="setup()" class="container">
 
-    <div class="user">
+    <div >
         <div style="height: 100%;" id="imgContainer">
             
         </div>
@@ -21,8 +21,13 @@
 
         <div class="pictureBar" id="pictureBar">
         </div>
-        <div class="tags">
-
+        <div id="tags" class="tags">
+            <div class="tag">Skipidy</div>
+            <div class="tag">GTA v</div>
+            <div class="tag">boges</div>
+            <div class="tag">Fortnite battlepass</div>
+            <div class="tag">Mor</div>
+            
         </div>
         <div class="nameTag">
             <h1>Gunnar - 6år</h1>
