--- a/app/swipe/swipePage.html
+++ b/app/swipe/swipePage.html
@@ -11,12 +11,13 @@
 </head>
 <body onload="setup()" class="container">
 
-    <div >
+    <div class="swipePerson">
         <div style="height: 100%;" id="imgContainer">
             
         </div>
 
         <div class="next-picture" id="next-picture"></div>
+        <div class="swipeZone" id="swipeZone"></div>
         <div class="last-picture" id="last-picture"></div>
 
         <div class="pictureBar" id="pictureBar">
@@ -38,5 +39,6 @@
 
     
     <script src="swipePage.js"></script>
+    <script src="swipeLogic.js"></script>
 </body>
 </html>
