--- a/loginPage/loginPage.html
+++ b/loginPage/loginPage.html
@@ -30,6 +30,6 @@
             <div class="smallText orangeText">Opret en konto</div>
         </div>
     </div>
-    <script src="loginPage.js"></script>
+    <script src="loginPage.js" type="module"></script>
 </body>
 </html>
