--- a/registerPage/registerPage.html
+++ b/registerPage/registerPage.html
@@ -32,6 +32,6 @@
             <div class="smallText orangeText">Log ind</div>
         </div>
     </div>
-    <script src="registerPage.js"></script>
+    <script src="registerPage.js" type="module"></script>
 </body>
 </html>
