--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <div id="loading" class="loading">
         <h1>Indlæser...</h1>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>    
+    <script src="firebaseAuth.js" type="module"></script>
     <script id="script" src="index.js" ></script>
     <script src="async.js" ></script>
-
 
 </body>
 </html>
