--- a/app/app.html
+++ b/app/app.html
@@ -41,6 +41,6 @@
         </svg>
     </div>
     
-    <script id="script" src="./app.js"></script>
+    <script id="script" src="./app.js" type="module"></script>
 </body>
 </html>
