--- a/app/profil/profilPage.html
+++ b/app/profil/profilPage.html
@@ -10,13 +10,13 @@
     <title>Swipe Side</title>
     <link rel="stylesheet" href="profilPage.css">
 </head>
-<body  onload="onLoad()" class="container">
+<body class="container">
     <div class="user">
 
 
         <div class="underContainer">
-            <img class="profilePic" src="https://randomuser.me/api/portraits/women/1.jpg" alt="">
-            <h1>Gunnar - 16år</h1>
+            <img id="profilePic" class="profilePic" src="https://randomuser.me/api/portraits/women/1.jpg" alt="">
+            <h1 id="usernameTag">Gunnar - 16år</h1>
         </div>
         <div class="divide">
 
@@ -59,7 +59,7 @@
 
     </div>
 
-    <script src="profilPage.js"></script>
+    <script src="profilPage.js" type="module"></script>
     
 </body>
 </html>
