--- a/app/swipe/swipePage.html
+++ b/app/swipe/swipePage.html
@@ -9,7 +9,7 @@
     <title>Swipe Side</title>
     <link rel="stylesheet" href="swipePage.css">
 </head>
-<body onload="setup()" class="container">
+<body class="container">
 
     <div class="swipePerson">
         <div style="height: 100%;" id="imgContainer">
@@ -38,7 +38,8 @@
     </div>
 
     
-    <script src="swipePage.js"></script>
-    <script src="swipeLogic.js"></script>
+    <script src="swipePage.js" type="module"></script>
+    <script src="swipeLogic.js" type="module"></script>
+    <script src="swipeBackend.js" type="module"></script>
 </body>
 </html>
