--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h1>Indlæser...</h1>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>    
-    <script src="firebaseAuth.js" type="module"></script>
-    <script id="script" src="index.js" ></script>
+   
+    <script id="script" src="firebaseAuth.js" type="module"></script>
+    <script src="firebaseDB.js" type="module"></script>
+    <script  src="index.js" ></script>
     <script src="async.js" ></script>
 
 </body>
