--- a/app/messageListPage/messageListPage.html
+++ b/app/messageListPage/messageListPage.html
@@ -10,13 +10,13 @@
     <title>Swipe Side</title>
     <link rel="stylesheet" href="messageListPage.css">
 </head>
-<body  onload="onLoad()">
+<body>
     <div id="senders" class="container">
 
     </div>
 
+    <iframe id="messagePersonPage" src="../messagePersonPage/messagePersonPage.html" height="100%" width="100%" style="display: none; position: fixed; top: 0;" frameborder="0"></iframe>
 
-
-    <script id="script" src="messageListPage.js"></script>
+    <script id="script" src="messageListPage.js" type="module"></script>
 </body>
 </html>
