--- a/app/messagePersonPage/messagePersonPage.html
+++ b/app/messagePersonPage/messagePersonPage.html
@@ -10,7 +10,7 @@
     <title>Swipe Side</title>
     <link rel="stylesheet" href="messagePersonPage.css">
 </head>
-<body onload="onLoad()">
+<body>
     <div id="messageContainer" class="messageContainer">
         <div class="messageLine">
             <p class="message fromUser">Hey, har du lavet lektierne?</p>
@@ -99,6 +99,6 @@
         </div>
     </div>
 
-    <script src="messagePersonPage.js"></script>
+    <script src="messagePersonPage.js" type="module"></script>
 </body>
 </html>
